redis配置修改